# hpi_chatbot_frontend

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.Docker.md  README.md  app.py  docker-compose.yaml  pyproject.toml
themes/: renbee.css
