[tool.poetry]
name = "hpi-chatbot-frontend"
version = "0.1.0"
description = "frontend for heatpump installer chatbot"
authors = ["sqr00t <797346+sqr00t@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
streamlit = "^1.36.0"
langserve = {extras = ["client"], version = "^0.2.2"}
langfuse = "^2.40.0"
streamlit-feedback = "^0.1.3"
streamlit-extras = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
